# NDI_WIN_LINUX

./: .gitignore  CMakeLists.txt  test_NDI.sln
Lib.Base/: AsyncFileWriterImp.cpp  AsyncFileWriterImp.h  AutoLoopClock.cpp  AutoLoopClock.h  AutoTimerClock.cpp  AutoTimerClock.h  BMRPoolMgr.h  BMRaudioFrame.cpp  CMakeLists.txt  CPUUsageHelper.cpp  CPUUsageHelper.h  ClosedCaptionPacket.h  CommonHelper.cpp  CommonHelper.h  CommonSampleBuffer.cpp  CommonSampleBuffer.h  ControlerTimeCode.h  Date.h  DateTimeCode.h  DateTimeCodeWithDot.h  DaysSince20190101.h  DllParser.h  DualObjectWrapper.h  IBaseFrame.h  IMasterClock.cpp  Lib.Base.vcxproj  Lib.Base.vcxproj.filters  ManualClock.cpp  ManualClock.h  OutputStream.h  ReadMe.txt  SyncMap.h  SyncSet.h  SyncUnorderedMap.h  SyncVector.h  TimeCodeWithDot.h  TimeID.cpp  TimeID.h  Time_Statistics.h  affinily.cpp  (+13 more)
Lib.Config/: CMakeLists.txt  Configurator.cpp  Configurator.h  GPUConfig.cpp  IConfig.h  Lib.Config.vcxproj  Lib.Config.vcxproj.filters  ReadMe.txt
Lib.FMT/: Lib.FMT.vcxproj  Lib.FMT.vcxproj.filters  os.cc
Lib.FrameConsumerNDI/: AudioProcess.cpp  AudioProcess.h  CMakeLists.txt  FrameConsumerNDI.cpp  FrameConsumerNDI.h  Lib.FrameConsumerNDI.vcxproj  Lib.FrameConsumerNDI.vcxproj.filters  stdafx.cpp
Lib.FrameProviderYuvFile/: CMakeLists.txt  FrameProviderYuvFile.cpp  FrameProviderYuvFile.h  Lib.FrameProviderYuvFile.vcxproj  Lib.FrameProviderYuvFile.vcxproj.filters  WaveReader.cpp  WaveReader.h
Lib.Logger/: Lib.Logger.vcxproj  Lib.Logger.vcxproj.filters  LogWriter.cpp  LogWriter.h
Linux/: Config.ini
test_NDI/: main.cpp  test_NDI.vcxproj
x64/Debug/: Config.ini
